Fix logo position on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -96,4 +96,10 @@ footer {
     top: 56px !important;
     height: calc(100% - 56px);
   }
+
+  nav .brand-logo {
+    left: 0 !important;
+    transform: none !important;
+    padding-left: 16px;
+  }
 }
